/*
 * $Id: ChangeLog,v 1.1388 2003/08/27 10:29:12 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-08-27 21:02 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/vm/hvm.c
  * source/vm/thread.c
  * include/thread.h
    ! Threadsafed some s_* signaled by Ron Pinkas

2003-08-27 14:07 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/filesys.c
  * source/rtl/philes.c
    ! fixed linux compilation
    ! fixed issues on process termination and stderr redirection in linux

  * tests/process.prg
    * Still other tests :-)

2003-08-27 12:43 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/filesys.c
  * source/rtl/philes.c
  * include/hbapifs.c
    + Added support for windows, both in X__WIN32__ mode and regular mode
      (support is more complete in X__WIN32__)
    * using char * parameter instead of BYTE* for command name

  * tests/process.prg
    * other tests :-)

2003-08-27 10:57 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/pp/pptable.c
    * reverted hack with @..SAY translation to DEVOUT{PICT} with
      additional two parameters. This breaks compatibility with
      Clipper. If some one needs it then please add such rule to
      your own .ch files not to the internal PP table which has
      to be Clipper compatible as most as possible.

  * xharbour/contrib/libct/ctwin.prg
    * small fixes to accept additional two parameters in DEVOUT
      and DEVOUTPICT

2003-08-26 18:35 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! stop execution if DBFCDX was not compiled with one byte alignment

    Sorry I have to do that as temporary solution to the moment I
    remove all #pragma from this code. In fact I have to rewrite
    most of them to do that. If you see message: