@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1388 2003/08/27 10:29:12 jonnymind Exp $
+ * $Id: ChangeLog,v 1.1389 2003/08/27 19:04:04 jonnymind Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2003-08-27 12:48 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/fm.c
+    * Changed HB_MEM_LIST_BLOCKS to use TraceLog()
+    ! Removed two redundant assignments of '\0' termination in blocks display,
+      the one in new HB_MEM_LIST_BLOCKS was obviously causing a GPF (found by Brian Hays).
 
 2003-08-27 21:02 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
   * source/vm/hvm.c
@@ -59,7 +65,7 @@
     source/rdd/dbfcdx/dbfcdx1.h or some of basic types in your
     compiler/architecture has different size then original author
     of DBFCDX thought - in such case you have to wait until someone
-    (probably I) correct the code removing all pragmas depended parts. 
+    (probably I) correct the code removing all pragmas depended parts.
 
 2003-08-26 17:07 UTC+2000 Giancarlo Niccolai <gian@niccolai.ws>
   * source/rtl/filesys.c
